color and text align fix

--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,7 @@ blockquote {
     position: relative;
     margin: 0;
     padding: 0.5rem;
+    text-align: center;
 }
 
 blockquote:before,
